[metadata]
name = spacemaze
version = 0.0.1
description = Space Maze!
long_description = file: README.md
long_description_content_type = text/markdown
author = Jaap Joris Vens
author_email = spacemaze@jj.rtts.eu
url = https://github.com/rtts/spacemaze
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
python_requires = '>=3.10'

[options]
packages = find:
install_requires =
    pygame

[options.extras_require]
dev =
    isort
    black
    flake8
    pip-tools
    pre-commit

[options.entry_points]
console_scripts =
    spacemaze = spacemaze.__init__:main

[flake8]
max-line-length = 88
extend-ignore = E203
